changed pics to cloudinary urls

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class='about-container'>
     <div class='about'>
       <div class='hi'><span class='hi-orange'>Hi I'm</span><span class='name'>Scott<span></span></div>
-      <img class='headshot rounded' src='https://res.cloudinary.com/dmkdfvoqb/image/upload/q_auto/v1548286375/scott-square-2.jpg'/>
+      <img class='headshot rounded' src='https://res.cloudinary.com/dmkdfvoqb/image/upload/v1548286375/scott-square-2.jpg'/>
         <a class='clickable github' href="https://github.com/scottgall">
           <svg
             class='icon icon-heading'
@@ -76,7 +76,7 @@
             <p class='statement'>I love learning about the web and creating smooth, accessible user experiences.  Here's some of my work...</p>
           <div class='project-container'>
             <p class='project-title'>LOOKING BACK</p>
-            <a href="https://looking-back.herokuapp.com/" ><img class='thumbnail rounded' src='assets/images/lookingback.jpg'/></a>
+            <a href="https://looking-back.herokuapp.com/" ><img class='thumbnail rounded' src='https://res.cloudinary.com/dmkdfvoqb/image/upload/v1552050513/lookingback.jpg'/></a>
             <p class='description'>MERN stack social media app</p>
             <div class='project-links'>
                 <a class='proj-button' href="https://looking-back.herokuapp.com/" ><img class="icon link-icon" src="assets/images/link2.svg" alt="Linkedin icon"></a>
@@ -86,7 +86,7 @@
 
           <div class='project-container'>
             <p class='project-title'>JOBSPACE</p>
-            <a href="https://thejobspace.herokuapp.com/" ><img class='thumbnail rounded xs-right' src='assets/images/jobspace.png'/></a>
+            <a href="https://thejobspace.herokuapp.com/" ><img class='thumbnail rounded xs-right' src='https://res.cloudinary.com/dmkdfvoqb/image/upload/v1552050488/jobspace.png'/></a>
             <p class='description xs-text-right'>MySQL job application tracker</p>
             <div class='project-links xs-text-right'>
               <a href="https://thejobspace.herokuapp.com/" ><img class="icon link-icon" src="assets/images/link2.svg" alt="Linkedin icon"></a>
@@ -96,8 +96,8 @@
 
           <div class='project-container'>
             <p class='project-title'>FRIDGE FORAGER</p>
-            <a href="https://scottgall.github.io/Fridge-Forager/" ><img class='thumbnail rounded s-right xs-left' src='assets/images/fridgeforager.jpg'/></a>
-            <p class='description s-text-right xs-text-left'>Yummly API recipe search engine</p>
+            <a href="https://scottgall.github.io/Fridge-Forager/" ><img class='thumbnail rounded s-right xs-left' src='https://res.cloudinary.com/dmkdfvoqb/image/upload/v1552050462/fridgeforager.jpg'/></a>
+            <p class='description s-text-right xs-text-left'>Customizable recipe search engine</p>
             <div class='project-links s-text-right xs-text-left'>
                 <a href="https://scottgall.github.io/Fridge-Forager/" ><img class="icon link-icon" src="assets/images/link2.svg" alt="Linkedin icon"></a>
                 <a href="https://github.com/scottgall/Fridge-Forager/" ><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
@@ -107,7 +107,7 @@
           <div class='project-container'>
             <p class='project-title'>SKATE TRIVIA</p>
             <a href="https://scottgall.github.io/Skateboard-Trivia-Quiz/" ><img class='thumbnail rounded l-right s-right' src='assets/images/skateboardtrivia.jpg'/></a>
-            <p class='description s-text-eifhr l-text-right'>Timed multiple-choice trivia game</p>
+            <p class='description s-text-eifhr l-text-right'>Trivia game using JS timing events</p>
             <div class='project-links l-text-right s-text-right'>
               <a href="https://scottgall.github.io/Skateboard-Trivia-Quiz/" "><img class="icon link-icon" src="assets/images/link2.svg" alt="Linkedin icon"></a>
               <a href="https://github.com/scottgall/Skateboard-Trivia-Quiz/" ><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
@@ -116,8 +116,8 @@
 
           <div class='project-container'>
             <p class='project-title'>STAR WARS RPG</p>
-            <a href="https://scottgall.github.io/Star-Wars-RPG/" ><img class='thumbnail rounded l-right s-left xs-left' src='assets/images/starwars.jpg'/></a>
-            <p class='description l-text-right s-text-left xs-text-left'>Single-player JavaScript RPG</p>
+            <a href="https://scottgall.github.io/Star-Wars-RPG/" ><img class='thumbnail rounded l-right s-left xs-left' src='https://res.cloudinary.com/dmkdfvoqb/image/upload/v1552050497/starwars.jpg'/></a>
+            <p class='description l-text-right s-text-left xs-text-left'>Single-player  RPG</p>
             <div class='project-links l-text-right s-text-left xs-text-left'>
               <a href="https://scottgall.github.io/Star-Wars-RPG/" ><img class="icon link-icon" src="assets/images/link2.svg" alt="Linkedin icon" /></a>
               <a href="https://github.com/scottgall/Star-Wars-RPG" ><img class="icon" src="assets/images/github.svg" alt="Linkedin icon" ></a>
@@ -128,7 +128,7 @@
 
           <div class='project-container'>
             <p class='project-title'>GUESS THE TRICK</p>
-            <a href="https://scottgall.github.io/Guess-The-Trick/" ><img class='thumbnail rounded l-right s-left xs-right' src='assets/images/guessthetrick.jpg'/></a>
+            <a href="https://scottgall.github.io/Guess-The-Trick/" ><img class='thumbnail rounded l-right s-left xs-right' src='https://res.cloudinary.com/dmkdfvoqb/image/upload/v1552050474/guessthetrick.jpg'/></a>
             <p class='description l-text-right s-text-left xs-text-right'>JavaScript hangman game</p>
             <div class='project-links l-text-right s-text-left xs-text-right'>
               <a href="https://scottgall.github.io/Guess-The-Trick/" ><img class="icon link-icon" src="assets/images/link2.svg" alt="Linkedin icon"></a>
