--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <!-- <p>scottarthurgall@gmail.com</p>
         <p>CHICAGO, IL</p>
         <p class='personal-statement'><i>I love building powerful tools and creating accessible experiences for the web.</i></p> -->
-      </div>
+    </div>
     </div>
 
       <div class='work'>
@@ -125,7 +125,6 @@
             <!-- <a href="https://scottgall.github.io/Star-Wars-RPG/">Link</a>
             <a href="https://github.com/scottgall/Star-Wars-RPG">GitHub</a> -->
           </div>
-
           <div class='project-container'>
             <p class='project-title'>GUESS THE TRICK</p>
             <a href="https://scottgall.github.io/Guess-The-Trick/" ><img class='thumbnail rounded l-right s-left xs-right' src='https://res.cloudinary.com/dmkdfvoqb/image/upload/v1552050474/guessthetrick.jpg'/></a>
@@ -138,9 +137,32 @@
 
         </div>
       </div>
+      <div class="extras-container">
+        <div class="extras-section">
+          I have a backround in education and experience in accounting/finance. I completed Northwestern's coding bootcamp in Sep'19 and have been learning, working on projects, and getting involved in local tech communitites.
+        </div>
+        <div class="extras-section">
+          I'm currently a Web Developer Apprentice at The Difference Engine, working with a team of devs to build a new CMS site for a local non-profit, Young Masterbuilders in Motion (YMIM).  The new site is built in React/Django and utilizes Docker containers.  Check out YMIM's current site to see the amazing things they're doing to inspire, connect, and empower young women orphans, adoptees, and foster youth alumnae to thrive!
+        </div>
+        <div class="extras-section">
+          When I'm not at work or doing code-related things, I love trying new foods, listening to podcasts, and biking.  My biggest passion however, is skateboarding.  I've been doing it for most of my life now and can honestly say that I feel more comfortable on 4 wheels than my own feet.
+        </div>
+      </div>
+      <div class="footer-container">
+        <div class="footer">
+          <div class="footer-content">
+            Always looking for new friends, projects, and opportunities.
+            <div class="contact-section">
+              <p class="hit-me-up">Hit me up!</p>
+              <div>(847) 505-2423<br>
+              scottarthurgall@gmail.com<br>
+              <a href="https://scottgall.github.io/Guess-The-Trick/" ><img class="icon mail-icon" src="assets/images/mail.svg" alt="mail icon"></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-
-  </div>  
   <script>
     const favicon = document.querySelector("link[rel=icon]");
   
