formatting extras section

--- a/index.html
+++ b/index.html
@@ -139,10 +139,10 @@
       </div>
       <div class="extras-container">
         <div class="extras-section">
-          I have a backround in education and experience in accounting/finance. I completed Northwestern's coding bootcamp in Sep'19 and have been learning, working on projects, and getting involved in local tech communitites.
+          I have a backround in education and experience in accounting/finance. I completed Northwestern's coding bootcamp in Sep'19 and have since continued learning, working on projects, and getting involved in local tech communitites.
         </div>
         <div class="extras-section">
-          I'm currently a Web Developer Apprentice at The Difference Engine, working with a team of devs to build a new CMS site for a local non-profit, Young Masterbuilders in Motion (YMIM).  The new site is built in React/Django and utilizes Docker containers.  Check out YMIM's current site to see the amazing things they're doing to inspire, connect, and empower young women orphans, adoptees, and foster youth alumnae to thrive!
+          I'm currently a Web Developer Apprentice at The Difference Engine working with a team of devs to build a custom CMS for a local non-profit, Young Masterbuilders in Motion (YMIM). The new site is utilizes Docker containers with a React/Redux front end, and Django/Postgres backend. Check out YMIM's current site to see the amazing things they're doing to inspire, connect, and empower young women orphans, adoptees, and foster youth alumnae to thrive!
         </div>
         <div class="extras-section">
           When I'm not at work or doing code-related things, I love trying new foods, listening to podcasts, and biking.  My biggest passion however, is skateboarding.  I've been doing it for most of my life now and can honestly say that I feel more comfortable on 4 wheels than my own feet.
