--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
               <p class="hit-me-up">Hit me up!</p>
               <div>(847) 505-2423<br>
               scottarthurgall@gmail.com<br>
-              <a href="https://scottgall.github.io/Guess-The-Trick/" ><img class="icon mail-icon" src="assets/images/mail.svg" alt="mail icon"></a>
+              <a href="mailto:scottarthurgall@gmail.com"><img class="icon mail-icon" src="assets/images/mail.svg" alt="mail icon"></a>
               </div>
             </div>
           </div>
