fixed typo and button clickability

--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@
           I have a backround in education and experience in accounting/finance. I completed Northwestern's coding bootcamp in Sep'19 and have since continued learning, working on projects, and getting involved in local tech communitites.
         </div>
         <div class="extras-section">
-          Right now I'm a Web Developer Apprentice at <a class="text-link" href="https://www.thedifferenceengine.io/">The Difference Engine</a> working with a team of devs to build a custom CMS for a local non-profit, Young Masterbuilders in Motion (YMIM). The <a class="text-link" href="https://github.com/the-difference-engine/ymim">new site</a> is utilizes Docker containers with a React/Redux front end, and Django/Postgres backend. Check out YMIM's <a class="text-link" href="https://theymim.org">current site</a> to see the amazing things they're doing to inspire, connect, and empower young women orphans, adoptees, and foster youth alumnae.
+          Right now I'm a Web Developer Apprentice at <a class="text-link" href="https://www.thedifferenceengine.io/">The Difference Engine</a> working with a team of devs to build a custom CMS for a local non-profit, Young Masterbuilders in Motion (YMIM). The <a class="text-link" href="https://github.com/the-difference-engine/ymim">new site</a> utilizes Docker containers with a React/Redux front end, and Django/Postgres backend. Check out YMIM's <a class="text-link" href="https://theymim.org">current site</a> to see the amazing things they're doing to inspire, connect, and empower young women orphans, adoptees, and foster youth alumnae.
         </div>
         <div class="extras-section">
-          When I'm not at work or coding, I love trying new foods, listening to podcasts, and biking. My biggest passion however, is skateboarding. I've been doing it for most of my life, and honestly feel more comfortable on 4 wheels than my own feet.  Check out some of my skate <a class="text-link" href="https://www.youtube.com/user/SagSagUsername/videos?view_as=subscriber">videos</a> on YouTube.
+          Aside from coding, I love trying new foods, listening to podcasts, and biking. My biggest passion however, is skateboarding. I've been doing it for most of my life, and honestly feel more comfortable on 4 wheels than my own feet.  Check out some of my skate <a class="text-link" href="https://www.youtube.com/user/SagSagUsername/videos?view_as=subscriber">videos</a> on YouTube.
         </div>
       </div>
       <div class="footer-container">
