added padding to statement and narrowed text

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div> -->
         
         <div class='project-section'>
-            <p class='statement'>I love learning about the web and creating smooth, accessible user experiences.  Here's some of my work...</p>
+            <p class='statement'>I love building for the web! Here's some of my work...</p>
           <div class='project-container'>
             <p class='project-title'>LOOKING BACK</p>
             <a href="https://looking-back.herokuapp.com/" ><img class='thumbnail rounded' src='https://res.cloudinary.com/dmkdfvoqb/image/upload/v1552050513/lookingback.jpg'/></a>
@@ -149,7 +149,7 @@
       <div class="footer-container">
         <div class="footer">
           <div class="footer-content">
-            Always looking for new friends, projects, and opportunities.
+            <p class="always-looking">Always looking for new friends, projects, and opportunities.</p>
             <div class="contact-section">
               <p class="hit-me-up">Hit me up!</p>
               <div>(847) 505-2423<br>
