--- a/index.html
+++ b/index.html
@@ -139,10 +139,11 @@
       </div>
       <div class="extras-container">
         <div class="extras-section extras-section-floats">
-          <a class="tde-logo" href="https://www.thedifferenceengine.io/"><img class="tde-logo" src="assets/images/tde.png" /></a>
+          <a class="tde-logo"><img class="tde-logo" src="assets/images/tde.png" /></a>
            I'm currently a Web Developer Apprentice at <a class="text-link" href="https://www.thedifferenceengine.io/">The Difference Engine</a> working with a team of devs to build a custom CMS for a local non-profit, Young Masterbuilders in Motion (YMIM). We're <a class="text-link" href="https://github.com/the-difference-engine/ymim">building</a>  a Django-based RESTful API backend and a single-page frontend in React, leveraging containeriation (through Docker and Heroku) to create a consistent environment accross development and deployment. Check out YMIM's <a class="text-link" href="https://theymim.org">current site</a> to see the amazing things they're doing to inspire, connect, and empower young women orphans, adoptees, and foster youth alumnae.
+           <br><br>
         </div>
-        <br>
+      
         <div class="extras-section">
           I love trying new foods, listening to podcasts, and biking. Though my greatest passion is skateboarding. I've been doing it now for most of my life.  Like coding, I love to skate because there's always something new to learn, and it never comes easy.  It's also an amazing outlet for self expression and creativity. Check out some of my <a class="text-link" href="https://www.youtube.com/user/SagSagUsername/videos?view_as=subscriber">videos</a> on YouTube.
         </div>
