responsive skate image

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <meta property="og:title" content="Portfolio" />
+  <meta property="og:title" content="Scott Gall" />
   <meta property="og:image" content="assets/images/thumb.png"/>
   <meta property="og:description" content="Scott Gall's web developer portfoloio site"/>
   <meta property="og:url" content="https://scott-gall.com/" />  
