edited more copy

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       <div class="extras-container">
         <div class="extras-section extras-section-floats">
           <a class="tde-logo" href="https://www.thedifferenceengine.io/"><img class="tde-logo" src="assets/images/tde.png" /></a>
-           I'm currently a Web Developer Apprentice at <a class="text-link" href="https://www.thedifferenceengine.io/">The Difference Engine</a> working with a team of devs to <a class="text-link" href="https://github.com/the-difference-engine/ymim">build</a> a custom CMS in React & Django for a local non-profit, Young Masterbuilders in Motion (YMIM). Check out their <a class="text-link" href="https://theymim.org">current site</a> to see how they inspire, connect, and empower young women orphans, adoptees, and foster youth alumnae.
+           I'm currently a Web Developer Apprentice at <a class="text-link" href="https://www.thedifferenceengine.io/">The Difference Engine</a> working with a team of devs to <a class="text-link" href="https://github.com/the-difference-engine/ymim">build</a> a custom CMS in React & Django for a local non-profit, Young Masterbuilders in Motion (YMIM). Head over to the <a class="text-link" href="https://theymim.org">current site</a> to see how YMIM inspires, connects, and empowers young women orphans, adoptees, and foster youth alumnae.
            <br><br>
         </div>
       
