--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div> -->
         
         <div class='project-section'>
-            <p class='statement'>I love building for the web! Here's some of my work...</p>
+            <p class='statement'>I love building for the web!<br> Here's some of my work...</p>
           <div class='project-container'>
             <p class='project-title'>LOOKING BACK</p>
             <a href="https://looking-back.herokuapp.com/" ><img class='thumbnail rounded' src='https://res.cloudinary.com/dmkdfvoqb/image/upload/v1552050513/lookingback.jpg'/></a>
