--- a/index.html
+++ b/index.html
@@ -4,13 +4,32 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Scott Gall</title>
+  <title>SG</title>
   <link rel="stylesheet" type="text/css" href="style.css">
-
+  <link rel="icon" data-emoji="👨‍💻" type="image/png">
 </head>
 <body>
   <h1>Scott Gall</h1>
   <h2>website maker person</h2>
   <img class="scottPic" src="./assets/images/scott.jpg" alt="Italian Trulli">
+  <script>
+    const favicon = document.querySelector("link[rel=icon]");
+  
+    if (favicon) {
+      const emoji = favicon.getAttribute("data-emoji");
+  
+      if (emoji) {
+        const canvas = document.createElement("canvas");
+        canvas.height = 64;
+        canvas.width = 64;
+  
+        const ctx = canvas.getContext("2d");
+        ctx.font = "64px serif";
+        ctx.fillText(emoji, 0, 64);
+  
+        favicon.href = canvas.toDataURL();
+      }
+    }
+  </script>
 </body>
 </html>
