changed profile pic to cloudinary link

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <a href="https://scott-gall.com/resume"><img class="link" src="./assets/images/cv.svg" alt="cv"></a>
     <a href="https://www.linkedin.com/in/scottarthurgall/"><img class="link" src="./assets/images/linkedin.svg" alt="linkedin"></a>
   </nav>
-  <img class="scottPic" src="./assets/images/scott.jpg" alt="scott">
+  <img class="scottPic" src="https://res.cloudinary.com/dmkdfvoqb/image/upload/v1567716485/scott.jpg" alt="scott">
   <a href="https://www.instagram.com/sagsagusername/"><img class="link" src="./assets/images/instagram.svg" alt="instagram"></a>
   <!-- Favicon script-->
   <script>
