--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <main role="main">
     <h1>Scott Gall</h1>
-    <p>website maker person</p>
+    <h2>website maker person</h2>
     <nav class="links">
       <a href="https://github.com/scottgall"><img class="link" src="./assets/images/github.svg" alt="github"></a>
       <a href="https://scott-gall.com/resume"><img class="link" src="./assets/images/cv.svg" alt="cv"></a>
