removed aria label

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>Scott Gall</h1>
     <h2>website maker person</h2>
   </header>
-  <nav role="navigation" aria-label="Main Navigation">
+  <nav role="navigation">
     <a href="https://github.com/scottgall"><img class="link" src="./assets/images/github.svg" alt="github"></a>
     <a href="https://scott-gall.com/resume"><img class="link" src="./assets/images/cv.svg" alt="cv"></a>
     <a href="https://www.linkedin.com/in/scottarthurgall/"><img class="link" src="./assets/images/linkedin.svg" alt="linkedin"></a>
