--- a/index.html
+++ b/index.html
@@ -11,15 +11,14 @@
 <body>
   <header role="banner">
     <h1>Scott Gall</h1>
-    <h2>website maker person</h2>
   </header>
   <nav role="navigation">
-    <a href="https://github.com/scottgall"><img class="link" src="./assets/images/github.svg" alt="github"></a>
     <a href="https://scott-gall.com/resume"><img class="link" src="./assets/images/cv.svg" alt="cv"></a>
     <a href="https://www.linkedin.com/in/scottarthurgall/"><img class="link" src="./assets/images/linkedin.svg" alt="linkedin"></a>
+    <a href="https://github.com/scottgall"><img class="link" src="./assets/images/github.svg" alt="github"></a>
   </nav>
   <main role="main">
-    <img class="scottPic" src="https://res.cloudinary.com/dmkdfvoqb/image/upload/v1567716485/scott.jpg" alt="scott">
+    <img class="scottPic" src="http://www.suchluck.com/august10/sag1.jpg" alt="scott">
   </main>
   <footer role="contentinfo">
     <a href="https://www.instagram.com/sagsagusername/"><img class="link" src="./assets/images/instagram.svg" alt="instagram"></a>
