--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>SG</title>
   <link rel="stylesheet" type="text/css" href="style.css">
-  <link rel="icon" data-emoji="👨‍💻" type="image/png">
+  <link rel="icon" data-emoji="🛹" type="image/png">
 </head>
 <body>
   <header role="banner">
