--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <a href="https://github.com/scottgall"><img class="link" src="./assets/images/github.svg" alt="github"></a>
   </nav>
   <main role="main">
-    <img class="scottPic" src="https://www.suchluck.com/august10/sag1.jpg" alt="scott">
+    <img class="scottPic" src="http://www.suchluck.com/august10/sag1.jpg" alt="scott">
   </main>
   <!-- Favicon script-->
   <script>
