--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
   <main role="main">
     <img class="scottPic" src="http://www.suchluck.com/august10/sag1.jpg" alt="scott">
   </main>
+  <footer role="contentinfo">
+    <a href="https://www.youtube.com/user/SagSagUsername/videos?view_as=subscriber"><img class="link" src="./assets/images/tube.png" alt="youtube"></a>
+  </footer>
   <!-- Favicon script-->
   <script>
     const favicon = document.querySelector("link[rel=icon]");
