changed youtube icon to jpg

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <img class="scottPic" src="http://www.suchluck.com/august10/sag1.jpg" alt="scott">
   </main>
   <footer role="contentinfo">
-    <a href="https://www.youtube.com/user/SagSagUsername/videos?view_as=subscriber"><img class="link" src="./assets/images/tube.png" alt="youtube"></a>
+    <a href="https://www.youtube.com/user/SagSagUsername/videos?view_as=subscriber"><img class="link" src="./assets/images/tube.jpg" alt="youtube"></a>
   </footer>
   <!-- Favicon script-->
   <script>
