--- a/index.html
+++ b/index.html
@@ -13,15 +13,16 @@
     <h1>Scott Gall</h1>
   </header>
   <nav role="navigation">
-    <a href="https://scott-gall.com/resume"><img class="link" src="./assets/images/cv.svg" alt="cv"></a>
-    <a href="https://www.linkedin.com/in/scottarthurgall/"><img class="link" src="./assets/images/linkedin.svg" alt="linkedin"></a>
-    <a href="https://github.com/scottgall"><img class="link" src="./assets/images/github.svg" alt="github"></a>
+    <a title="Resume" href="https://scott-gall.com/resume"><img class="link" src="./assets/images/cv.svg" alt="cv"></a>
+    <a title="LinkedIn profile" href="https://www.linkedin.com/in/scottarthurgall/"><img class="link" src="./assets/images/linkedin.svg" alt="linkedin"></a>
+    <a title="GitHub profile" href="https://github.com/scottgall"><img class="link" src="./assets/images/github.svg" alt="github"></a>
   </nav>
   <main role="main">
     <img class="scottPic" src="http://www.suchluck.com/august10/sag1.jpg" alt="scott">
   </main>
   <footer role="contentinfo">
-    <a href="https://www.youtube.com/user/SagSagUsername/videos?view_as=subscriber"><img class="link" src="./assets/images/tube.jpg" alt="youtube"></a>
+    <a title="YouTube" href="https://www.youtube.com/user/SagSagUsername/videos?view_as=subscriber"><img class="link" src="./assets/images/tube.svg" alt="youtube"></a>
+    <a class="zorkLink" title="Sk8 Zork" href="https://sk8zork.com">🛹</a>
   </footer>
   <!-- Favicon script-->
   <script>
