--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <a title="GitHub profile" href="https://github.com/scottgall"><img class="link" src="./assets/images/github.svg" alt="github"></a>
   </nav>
   <main role="main">
-    <img class="scottPic" src="http://www.suchluck.com/august10/sag1.jpg" alt="scott">
+    <img class="scottPic" src="http://www.suchluck.com/august10/sag1.jpg" alt="scott" title="boi">
   </main>
   <footer role="contentinfo">
     <a title="YouTube" href="https://www.youtube.com/user/SagSagUsername/videos?view_as=subscriber"><img class="link" src="./assets/images/tube.svg" alt="youtube"></a>
