delete some stuff

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
   <header role="banner">
-    <h1>Scott <span class="quote">I'll eat as many cookies as you give me</span> Gall</h1>
+    <h1>Scott Gall</h1>
+    <a>I'm a skater</a>
   </header>
   <nav role="navigation">
     <a title="Resume" href="https://scott-gall.com/resume"><img class="link" src="./assets/images/cv.svg" alt="cv"></a>
