--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <header role="banner">
     <h1>Scott Gall</h1>
-    <a>I'm a skateboarder.</a>
+    <p>I'm a skateboarder.</p>
   </header>
   <nav role="navigation">
     <a title="Resume" href="https://scott-gall.com/resume"><img class="link" src="./assets/images/cv.svg" alt="cv"></a>
