--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <a title="GitHub profile" href="https://github.com/scottgall"><img class="link" src="./assets/images/github.svg" alt="github"></a>
   </nav>
   <main role="main">
-    <a>Hi! I'm a developer with a passion for creating accessible experiences on the web. I love to skateboard, read, and cook meals with my boyfriend. I'm currently studying data anylytics and visualization. Learning Python has been really fun so far, and I hope to be able able to analyze data and create visualizations that tell stories.</a>
+    <a class="intro">Hi! I'm a developer with a passion for creating accessible experiences on the web. I love to skateboard, read, and cook meals with my boyfriend. I'm currently studying data anylytics and visualization. Learning Python has been really fun so far, and I hope to be able able to analyze data and create visualizations that tell moving stories.</a>
     <img class="scottPic" src="./assets/images/scott.jpeg" alt="scott" title="boi">
   </main>
   <footer role="contentinfo">
