--- a/index.html
+++ b/index.html
@@ -138,11 +138,11 @@
         </div>
       </div>
       <div class="extras-container">
-        <div class="extras-section extras-section-floats">
+        <!-- <div class="extras-section extras-section-floats">
           <a class="tde-logo" href="https://www.thedifferenceengine.io/"><img class="tde-logo" src="assets/images/tde.png" /></a>
            I'm currently a Web Developer Apprentice at <a class="text-link" href="https://www.thedifferenceengine.io/">The Difference Engine</a> working with a team of devs to <a class="text-link" href="https://github.com/the-difference-engine/ymim">build</a> a custom CMS in React & Django for a local non-profit, Young Masterbuilders in Motion (YMIM). Head over to the <a class="text-link" href="https://theymim.org">current site</a> to see how YMIM inspires, connects, and empowers young women orphans, adoptees, and foster youth alumnae.
            <br><br>
-        </div>
+        </div> -->
       
         <div class="extras-section">
           <a class="" href="https://www.youtube.com/watch?v=NQpKEpVTo1M&t=11s"><img class="skate" src="assets/images/skate.jpg" /></a>
