added www to url

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta property="og:title" content="Scott Gall" />
   <meta property="og:image" content="assets/images/thumb.png"/>
   <meta property="og:description" content="Scott Gall's web developer portfoloio site"/>
-  <meta property="og:url" content="https://scott-gall.com/" />  
+  <meta property="og:url" content="https://www.scott-gall.com/" />  
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>SG</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
