--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta property="og:title" content="Scott Gall" />
   <meta property="og:image" content="assets/images/thumb.png"/>
-  <meta property="og:description" content="Scott Gall's web developer portfoloio site"/>
+  <meta property="og:description" content="Personal site & portfolio"/>
   <meta property="og:url" content="https://www.scott-gall.com/" />  
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="format-detection" content="telephone=no">
