--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta property="og:title" content="Scott Gall" />
   <meta property="og:image" content="assets/images/thumb.png"/>
-  <meta property="og:description" content="Hi I'm Scott! I love to build for the web!"/>
+  <meta property="og:description" content="Hi I'm Scott! I love to build for the web! Check out some of my work and learn more about me."/>
   <meta property="og:url" content="https://www.scott-gall.com/" />  
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="format-detection" content="telephone=no">
