--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <meta property="og:title" content="Resume" />
       <meta property="og:image" content="assets/images/resume-thumb.png"/>
-      <meta property="og:description" content="Resume"/>
+      <meta property="og:description" content=""/>
       <meta property="og:url" content="https://scott-gall.com/resume" />  
       <title>resume</title>
   </head>
