--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,7 @@
       <meta property="og:title" content="Resume" />
       <meta property="og:image" content="assets/images/resume-thumb.png"/>
       <meta property="og:description" content=""/>
-      <meta property="og:url" content="https://scott-gall.com/resume" />  
+      <meta property="og:url" content="https://www.scott-gall.com/resume" />  
       <title>resume</title>
   </head>
   <body style="height: 100%; width: 100%; overflow: hidden; margin: 0px; background-color: rgb(82, 86, 89);">
