--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <div class='project-container'>
             <p class='project-title'>LOOKING BACK</p>
             <a href="https://looking-back.herokuapp.com/" ><img class='thumbnail rounded' src='https://res.cloudinary.com/dmkdfvoqb/image/upload/v1552050513/lookingback.jpg'/></a>
-            <p class='description'>MERN stack social media app with auth</p>
+            <p class='description'>MERN stack social media app w/ auth</p>
             <div class='project-links'>
                 <a class='proj-button' href="https://looking-back.herokuapp.com/" ><img class="icon link-icon" src="assets/images/link2.svg" alt="Linkedin icon"></a>
                 <a href="https://github.com/scottgall/Looking-Back/" ><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
@@ -88,7 +88,7 @@
           <div class='project-container'>
             <p class='project-title'>JOBSPACE</p>
             <a href="https://thejobspace.herokuapp.com/" ><img class='thumbnail rounded xs-right' src='https://res.cloudinary.com/dmkdfvoqb/image/upload/v1552050488/jobspace.png'/></a>
-            <p class='description xs-text-right'>Kanban board job application tracker with MySQL</p>
+            <p class='description xs-text-right'>Kanban board job app tracker w/ MySQL</p>
             <div class='project-links xs-text-right'>
               <a href="https://thejobspace.herokuapp.com/" ><img class="icon link-icon" src="assets/images/link2.svg" alt="Linkedin icon"></a>
               <a href="https://github.com/scottgall/Job-Space/" ><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
@@ -98,7 +98,7 @@
           <div class='project-container'>
             <p class='project-title'>FRIDGE FORAGER</p>
             <a href="https://scottgall.github.io/Fridge-Forager/" ><img class='thumbnail rounded s-right xs-left' src='https://res.cloudinary.com/dmkdfvoqb/image/upload/v1552050462/fridgeforager.jpg'/></a>
-            <p class='description s-text-right xs-text-left'>Customizable recipe search engine using Yummly API</p>
+            <p class='description s-text-right xs-text-left'>Recipe search engine w/ Yummly API</p>
             <div class='project-links s-text-right xs-text-left'>
                 <a href="https://scottgall.github.io/Fridge-Forager/" ><img class="icon link-icon" src="assets/images/link2.svg" alt="Linkedin icon"></a>
                 <a href="https://github.com/scottgall/Fridge-Forager/" ><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
@@ -108,7 +108,7 @@
           <div class='project-container'>
             <p class='project-title'>SKATE TRIVIA</p>
             <a href="https://scottgall.github.io/Skateboard-Trivia-Quiz/" ><img class='thumbnail rounded l-right s-right' src='assets/images/skateboardtrivia.jpg'/></a>
-            <p class='description s-text-eifhr l-text-right'>Trivia game using JavaScript timing events</p>
+            <p class='description s-text-eifhr l-text-right'>Trivia game using JS timing events</p>
             <div class='project-links l-text-right s-text-right'>
               <a href="https://scottgall.github.io/Skateboard-Trivia-Quiz/" "><img class="icon link-icon" src="assets/images/link2.svg" alt="Linkedin icon"></a>
               <a href="https://github.com/scottgall/Skateboard-Trivia-Quiz/" ><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
@@ -129,7 +129,7 @@
           <div class='project-container'>
             <p class='project-title'>GUESS THE TRICK</p>
             <a href="https://scottgall.github.io/Guess-The-Trick/" ><img class='thumbnail rounded l-right s-left xs-right' src='https://res.cloudinary.com/dmkdfvoqb/image/upload/v1552050474/guessthetrick.jpg'/></a>
-            <p class='description l-text-right s-text-left xs-text-right'>JavaScript hangman game</p>
+            <p class='description l-text-right s-text-left xs-text-right'>JS hangman game</p>
             <div class='project-links l-text-right s-text-left xs-text-right'>
               <a href="https://scottgall.github.io/Guess-The-Trick/" ><img class="icon link-icon" src="assets/images/link2.svg" alt="Linkedin icon"></a>
               <a href="https://github.com/scottgall/Guess-The-Trick/" ><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
